fixing the alignment of inner items

--- a/src/app/navbar/navbar.component.less
+++ b/src/app/navbar/navbar.component.less
@@ -48,7 +48,7 @@
     .innermenu {
         display: inline-block;
         position: absolute;
-        top: 40px;
+        top: -6px;
         left: 150px;
         width: 150px;
         padding: 6px 0;
